--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,6 @@
 # Ignore bundler config.
 /.bundle
 
-.idea/*
-
 # Ignore all logfiles and tempfiles.
 /log/*
 /tmp/*
@@ -17,3 +15,4 @@
 
 # Ignore Byebug command history file.
 .byebug_history
+.idea/
